automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heroes_df = None\n",
-    "powers_df = None"
+    "heroes_df = pd.read_csv('heroes_information.csv')\n",
+    "powers_df = pd.read_csv('super_hero_powers.csv')"
    ]
   },
   {
@@ -78,7 +87,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_df.drop(labels='Unnamed: 0', axis=1, inplace=True)\n",
+    "heroes_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +113,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(heroes_df.info())\n",
+    "heroes_df.isna().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powers_df.info()\n",
+    "powers_df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,8 +143,9 @@
     "\n",
     "Describe your strategy below this line:\n",
     "____________________________________________________________________________________________________________________________\n",
+    "Beginning with the 'heroes_df' dataset, column 'Publisher' was shown to have 15 null values. It was decided that the null values be given the string 'NaN' in place. The next column with null values was 'Weight.' Upon analyzing the data and revealing a significant amount of placeholder values, the null values were moved to this category. The remaining columns were examined for placeholder values, and all but the 'name' column contained placeholders. For each column with placeholders, the amount was considered significant and all were left as an additional category.\n",
     "\n",
-    "\n"
+    "For the 'powers_df' dataset, no null values were found. It contains a first column 'hero_names' with dtype:object, and an additional 167 columns with dtypes:bool."
    ]
   },
   {
@@ -127,21 +153,145 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_df.isna().describe()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_df['Publisher'].unique()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(heroes_df['Publisher'].value_counts(normalize=True))\n",
+    "heroes_df['Publisher'].isna().sum()/len(heroes_df['Publisher'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Publisher'].fillna('NaN', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Weight'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Weight'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Weight'].fillna(-99, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['name'].value_counts(normalize=True).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Gender'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Eye color'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Race'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Hair color'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Height'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Skin color'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heroes_df['Alignment'].value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powers_df.isna().any().describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,21 +309,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_df.rename(columns={'name':'hero_names'}, inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_with_powers_df = heroes_df.set_index('hero_names').join(powers_df.set_index('hero_names'), how='left')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_with_powers_df.fillna(False, inplace=True)\n",
+    "heroes_with_powers_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,7 +344,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure(figsize=(10,10))\n",
+    "ax = fig.add_subplot(111)\n",
+    "\n",
+    "male_heroes_df = heroes_with_powers_df.loc[heroes_with_powers_df['Gender']=='Male']\n",
+    "female_heroes_df = heroes_with_powers_df.loc[heroes_with_powers_df['Gender']=='Female']\n",
+    "\n",
+    "ax.scatter(male_heroes_df['Height'], male_heroes_df['Weight'], label='Male')\n",
+    "ax.scatter(female_heroes_df['Height'], female_heroes_df['Weight'], marker='*', color='red', label='Female')\n",
+    "ax.set_xlim(0,500),ax.set_ylim(0,500)\n",
+    "ax.set_xlabel('Height')\n",
+    "ax.set_ylabel('Weight')\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,11 +382,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "male_heroes_df = None\n",
-    "female_heroes_df = None\n",
+    "male_heroes_df = heroes_with_powers_df.loc[heroes_with_powers_df['Gender']=='Male']\n",
+    "female_heroes_df = heroes_with_powers_df.loc[heroes_with_powers_df['Gender']=='Female']\n",
     "\n",
     "def show_distplot(dataframe, gender, column_name):\n",
-    "    pass"
+    "    if gender == 'Male':\n",
+    "        dataframe = dataframe.loc[dataframe['Gender']=='Male']\n",
+    "    elif gender == 'Female':\n",
+    "        dataframe = dataframe.loc[dataframe['Gender']=='Female']\n",
+    "    return sns.distplot(dataframe[column_name].loc[dataframe[column_name]>-99])"
    ]
   },
   {
@@ -224,7 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Male Height\n"
+    "# Male Height\n",
+    "show_distplot(heroes_with_powers_df, 'Male', 'Height')"
    ]
   },
   {
@@ -233,7 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Male Weight\n"
+    "# Male Weight\n",
+    "show_distplot(heroes_with_powers_df, 'Male', 'Weight')"
    ]
   },
   {
@@ -242,7 +419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Female Height\n"
+    "# Female Height\n",
+    "show_distplot(heroes_with_powers_df, 'Female', 'Height')"
    ]
   },
   {
@@ -251,7 +429,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Female Weight\n"
+    "# Female Weight\n",
+    "show_distplot(heroes_with_powers_df, 'Female', 'Weight')"
    ]
   },
   {
@@ -262,7 +441,13 @@
     "\n",
     "Wite your answer below this line:\n",
     "____________________________________________________________________________________________________________________________\n",
-    "\n"
+    "Male height has mean, median, and mode of 191.97, 185, and 183, respectively. Distribution shape is sharp.\n",
+    "\n",
+    "Male weight has mean, median, and mode of 125.57, 90, and 79, respectively. Distribution shape is moderately sharp.\n",
+    "\n",
+    "Female height has mean, median, and mode of 174.68, 170, and 168, respectively. Distribution shape is sharp.\n",
+    "\n",
+    "Female weight has mean, median, and mode of 78.84, 58, and 54, respectively. Distribution shape is shallow."
    ]
   },
   {
@@ -283,28 +468,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "powers_df.set_index('hero_names')[:-1].sum().sort_values(ascending=False).head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marvel_df = heroes_with_powers_df.loc[heroes_with_powers_df['Publisher']=='Marvel Comics']\n",
+    "marvel_df.iloc[:-1,9:-1].sum().sort_values(ascending=False).head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "DC_df = heroes_with_powers_df.loc[heroes_with_powers_df['Publisher']=='DC Comics']\n",
+    "DC_df.iloc[:-1,9:-1].sum().sort_values(ascending=False).head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,7 +502,7 @@
     "\n",
     "Wite your answer below this line:\n",
     "____________________________________________________________________________________________________________________________\n",
-    "\n",
+    "The first most common power for Marvel and DC is Super Strength. They also share three other powers in the top five. The only differing power is Agility for Marvel and Flight for DC. Marvel shares the top five with the overall dataset with a flip in ranking between Durability and Stamina.\n",
     "\n",
     "### Your Own Investigation\n",
     "\n",
@@ -330,7 +516,7 @@
     "\n",
     "Explain your question below this line:\n",
     "____________________________________________________________________________________________________________________________\n",
-    "\n",
+    "What powers are most common based on alignment, and does it differ between gender?\n",
     "\n",
     "\n",
     "Some sample cells have been provided to give you room to work. If you need to create more cells, you can do this easily by:\n",
@@ -346,42 +532,161 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "good_df = heroes_with_powers_df.loc[heroes_with_powers_df['Alignment']=='good']\n",
+    "bad_df = heroes_with_powers_df.loc[heroes_with_powers_df['Alignment']=='bad']\n",
+    "\n",
+    "x = good_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:10]\n",
+    "y = bad_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:10]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure(figsize=(16,10))\n",
+    "ax1 = fig.add_subplot(111)\n",
+    "\n",
+    "ax1.bar(x.index,x/x.sum(), align='edge', width=-.2, label='Hero')\n",
+    "ax1.bar(y.index,y/y.sum(), align='edge', width=.2, label='Villain')\n",
+    "\n",
+    "ax1.set_title('Super Power Comparison Between Heroes and Villains', fontsize=16)\n",
+    "ax1.set_xlabel('Super Power', fontsize=12)\n",
+    "ax1.set_ylabel('Occurrence of Power(Normalized for Top 10)', fontsize=12)\n",
+    "ax1.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "good_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:10]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bad_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:10]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "good_male_df = good_df.loc[good_df['Gender']=='Male']\n",
+    "good_female_df = good_df.loc[good_df['Gender']=='Female']\n",
+    "\n",
+    "x = good_male_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]\n",
+    "y = good_female_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure(figsize=(18,10))\n",
+    "ax1 = fig.add_subplot(111)\n",
+    "\n",
+    "ax1.bar(x.index,x/x.sum(), align='edge', width=-.2, label='Male Hero')\n",
+    "ax1.bar(y.index,y/y.sum(), align='edge', width=.2, label='Female Hero')\n",
+    "\n",
+    "ax1.set_title('Super Power Comparison Between Male and Female Heroes', fontsize=16)\n",
+    "ax1.set_xlabel('Super Power', fontsize=12)\n",
+    "ax1.set_ylabel('Occurrence of Power(Normalized for Top 12)', fontsize=12)\n",
+    "ax1.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_male_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_female_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_male_df = bad_df.loc[bad_df['Gender']=='Male']\n",
+    "bad_female_df = bad_df.loc[bad_df['Gender']=='Female']\n",
+    "\n",
+    "x = bad_male_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]\n",
+    "y = bad_female_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(16,10))\n",
+    "ax1 = fig.add_subplot(111)\n",
+    "\n",
+    "ax1.bar(x.index,x/x.sum(), align='edge', width=-.2, label='Male Villain')\n",
+    "ax1.bar(y.index,y/y.sum(), align='edge', width=.2, label='Female Villain')\n",
+    "\n",
+    "ax1.set_title('Super Power Comparison Between Male and Female Villains', fontsize=16)\n",
+    "ax1.set_xlabel('Super Power', fontsize=12)\n",
+    "plt.setp(ax1.xaxis.get_majorticklabels(), rotation=45)\n",
+    "ax1.set_ylabel('Occurrence of Power(Normalized for Top 12)', fontsize=12)\n",
+    "ax1.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_male_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_female_df.iloc[:-1,9:-1].sum().sort_values(ascending=False)[0:12]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When comparing powers of heroes and villains, the top ten were similar for both groups. However, villains were more likely to have Super Strength, Durability, and Intelligence. Heroes were more like to have Agility and Flight. Looking at heroes only, females were more likely to Super Strength, Agility, Flight, Reflexes, Intelligence, and Steath. For villains only, occurrence of Super Strength, Agility, and Reflexes favored female villains, while Super Speed, Intelligence, and flight favored male villains. It is important to note that overall, there was significantly fewer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -412,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
